# detectAPP

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Cyolo5.cpp  Cyolo5.h  YoloLayer.cpp  YoloLayer.h  utils.cpp  utils.h  yolo8.cpp  yolo8.h
app/src/main/java/com/example/myapplication/: AspectRatioFrameLayout.java  ImageHandler.java  ImageModel.java  MainActivity.java  Object_box.java  YOLO5.java  objectResult_view.java  processOutput.java  yolo8.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
